# on-top-of-pasketti

./: README.md
phonetic-track/1st Place/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  requirements.txt
phonetic-track/1st Place/docs/: RELEASE.md  SOLUTION.md  TREE_RERANKER_SUCCESS_LOG.md
phonetic-track/1st Place/notebooks/: 02_run_inference.ipynb
phonetic-track/1st Place/scripts/: _resolve_models.py  download_weights.sh  pack_submission.sh  sync_core_from_pikachu.sh  (+1 more)
phonetic-track/2nd Place/: .gitignore  LICENSE  README.md  pack_submission.sh  pyproject.toml  run_inference.py
phonetic-track/2nd Place/configs/: default.yaml
phonetic-track/2nd Place/configs/augmentation/: high.yaml  low.yaml  none.yaml
phonetic-track/2nd Place/configs/decoder/: beam_search.yaml  beam_search_simple.yaml  greedy.yaml  mbr.yaml
phonetic-track/2nd Place/configs/experiments/: 04-19-51_homeless-tu_delft-152.yaml  14-15-00_robust-cv_over_lb-202.yaml  15-59-07_thieving-lb_over_cv-77.yaml  17-23-47_lovely-kaggle_bronze-172.yaml  anker-aerospace-78.yaml  annoying-Liam-252.yaml  config_horrible_trust_me_bro-81.yaml  lovely-mini_fridge-371.yaml  misogynistic-nuke-21.yaml  mtl_baseline.yaml  robust-cloverfitting-10.yaml  robust-cv_over_lb-202.yaml
phonetic-track/2nd Place/configs/final_submission/: hubertLarge1.yaml  hubertLarge2.yaml  wavlmAlldata1.yaml  wavlmAlldata2.yaml  wavlmLarge1.yaml  wavlmLarge2.yaml  wavlmLarge3.yaml  wavlmLarge4.yaml  whisperLarge1.yaml  whisperLarge2.yaml  whisperLarge3.yaml  whisperMedium1.yaml  whisperMedium2.yaml
phonetic-track/2nd Place/configs/loss/: ctc_loss_batch_red.yaml  ctc_loss_len_red.yaml  focal_ctc_loss.yaml
phonetic-track/2nd Place/configs/model/: wav2vec2_ctc.yaml  wav2vec2_mtl.yaml  whisper_ctc.yaml
phonetic-track/2nd Place/configs/sampler/: bucket.yaml  duration.yaml
phonetic-track/2nd Place/configs/scheduler/: CosineAnnealingLR.yaml  tri_stage.yaml  tri_stage_differential.yaml
phonetic-track/2nd Place/configs/tokenizer/: phoneme.yaml  phoneme_long_mark.yaml  word_char.yaml
phonetic-track/2nd Place/configs/training/: chatgpt_where_merch.yaml  wav2vec2-base.yaml  wav2vec2_mtl.yaml  wav2vec2_og_notebook.yaml  whisper-base.yaml
phonetic-track/2nd Place/configs/wandb_sweep/: hubert_sweep.yaml  hubert_sweep_ssl.yaml  wavlm_base.yaml  wavlm_base_final.yaml  wavlm_large.yaml  whisper.yaml  whisper_medium_final.yaml
phonetic-track/2nd Place/exploration/: EDA.ipynb  compare_ctc_lattices.py  diarization_auditor.py  ensemble_ctc_posteriors.py  ensemble_ctc_smooth_weights.py  extract_features.py  oof_predictions_eda.ipynb  phonetic_analysis.py  sweep_ctc_ensemble.py  test_augmentations.py  vis_decoder_sweep.py  wav2vec.ipynb
phonetic-track/2nd Place/runtime/: pyproject.toml
phonetic-track/2nd Place/src/: eval.py  mbr_eval.py  mbr_eval_bp.py  run_pipeline.py
phonetic-track/2nd Place/src/inference/: download_demucs_assets.py  download_wheels.py  evaluate_sequence_ensemble_rules.py  llm-fusion.py
phonetic-track/2nd Place/src/logging/: oof_analysis.py
phonetic-track/2nd Place/src/preprocessing/: audio_cleaner.py  augmenations.py  create_noise_samples.py  data_split.py  dataset.py  dataset_mtl.py  filter_audio.py  get_json.py  phoneme_tokenizer.py  preprocess_audio.py  word_char_tokenizer.py
phonetic-track/2nd Place/src/train/: train_CTC.py  train_CTC_mtl.py
phonetic-track/2nd Place/src/utils/: cosine_lr_scheduler.py  decoder.py  hf_local.py  loss.py  models.py  models_mtl.py  post_process.py  score.py  tri_stage_lr_scheduler.py
phonetic-track/2nd Place/src/utils/smac_runner/: smac_ssl_sweep.py  smac_ssl_sweep_v2.py  smac_wav_sweep.py  smac_whisper_sweep.py  smac_whisper_sweep_v2.py
phonetic-track/2nd Place/src/vowel_rescoring/: evaluate.py  pipeline.py  train_xgb.py
phonetic-track/3rd Place/: LICENSE  README.md  merge_pseudolabel.py  model.py  process_train_data.py  pseudo_label.py  requirement.txt  resampling_noise.py  train_multi_4way_hybrid.py
word-track/1st Place/: .gitignore  LICENSE  README.md  prepare_dataset.sh  pyproject.toml
word-track/1st Place/csrc/: pyproject.toml
word-track/1st Place/csrc/src/csrc/: decode_smoke_log.py  filters.py  ipa_normalize.py  manifest.py  metric.py  normalize.py
word-track/1st Place/csrc_parakeet/: pyproject.toml
word-track/1st Place/csrc_parakeet/configs/: parakeet_exp013.yaml
word-track/1st Place/csrc_parakeet/src/csrc_parakeet/: config.py  eval.py  eval_smoke.py  finetune.py  manifest.py  merge_pred.py  noise_manifest.py  predict_val.py  speed_perturb.py
word-track/1st Place/csrc_prep/: pyproject.toml
word-track/1st Place/csrc_prep/src/csrc_prep/: convert_train_jsonl_to_csv.py  convert_transcript_json_to_csv.py  flac_to_mp3.py  get_audio_duration.py  make_smoke.py  merge_train_csv.py
word-track/1st Place/csrc_prep/src/csrc_prep/concat_audio/: concat_audio.py  concat_csv.py
word-track/1st Place/csrc_prep/src/csrc_prep/forced_align/: align.py  final_result_jsonl_to_csv.py  manifest.py  split_by_alignment.py
word-track/1st Place/csrc_qwen/: pyproject.toml
word-track/1st Place/csrc_qwen/configs/: qwen_exp022.yaml  qwen_exp023.yaml  qwen_exp025.yaml  qwen_exp026.yaml
word-track/1st Place/csrc_qwen/src/csrc_qwen/: average_adapters.py  average_models.py  config.py  dataset.py  finetune.py  manifest.py  merge_adapter.py  predict_val.py
word-track/1st Place/csrc_qwen/src/csrc_qwen/qwen_asr/core/transformers_backend/: modeling_qwen3_asr.py
word-track/1st Place/csrc_qwen/src/csrc_qwen/qwen_asr/inference/: qwen3_asr.py  qwen3_forced_aligner.py
word-track/1st Place/runtime/: pack_submission.sh
word-track/1st Place/runtime/configs/: qwen_config.yaml
word-track/1st Place/runtime/src/: main.py
word-track/1st Place/runtime/src/qwen_asr/: __init__.py
word-track/1st Place/runtime/src/qwen_asr/core/transformers_backend/: __init__.py
word-track/2nd Place/: LICENSE  README.md
word-track/3rd Place/: LICENSE  README.md  qwen3_asr_sft.py  requirements.txt  train-X4090D-v013-Qwen3-ASR-1.7B-all-data.ipynb  train-X4090D-v025-X4090D-v013-continue-training.ipynb
(+116 files in other folders)
