[project]
name = "csrc_parakeet"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "lightning>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "loguru>=0.7.3",
    "pandas<3.0.0",
    "tqdm>=4.67.3",
    "csrc",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
nemo = ["nemo-toolkit[asr]"]

[tool.uv.sources]
csrc = { workspace = true }
nemo-toolkit = { git = "https://github.com/NVIDIA-NeMo/NeMo.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
