[project]
name = "csrc_prep"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "tqdm>=4.67.3",
    "typer>=0.9.0",
]


[project.optional-dependencies]
nemo = [
    "nemo-toolkit[asr]",
]

[tool.uv.sources]
nemo-toolkit = { git = "https://github.com/NVIDIA-NeMo/NeMo.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
