[project]
name = "csrc_qwen"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "nagisa==0.2.11",
    "transformers>=4.57.6",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "loguru>=0.7.3",
    "pandas<3.0.0",
    "csrc",
    "wandb>=0.25.0",
    "peft>=0.11.0",
    "accelerate>=0.30.0",
    "librosa>=0.10.0",
    "torch>=2.0.0,<2.10.0",
    "numpy<2.3",
    "bitsandbytes>=0.49.2",
]

[project.optional-dependencies]
vllm = ["vllm==0.14.0"]
flash-attn = ["flash-attn==2.8.3"]

[tool.uv.sources]
csrc = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
